samples/_failures_safe/1761308819_7392e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6b14fbcd.c: In function ‘main’:
./samples/SAFE/__tmp_6b14fbcd.c:149:5: error: expected declaration or statement at end of input
  149 |     }
      |     ^
